--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
     "@vuepress/plugin-back-to-top": "^1.0.0-rc.1",
     "@vuepress/plugin-google-analytics": "^1.0.0-rc.1",
-    "vuepress": "^1.0.2"
+    "vuepress": "^1.0.2",
+    "vuepress-plugin-autometa": "^0.1.10"
   },
   "scripts": {
     "dev": "vuepress dev",
