--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "devDependencies": {
-    "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
-    "@vuepress/plugin-back-to-top": "^1.0.0-rc.1",
-    "@vuepress/plugin-google-analytics": "^1.0.0-rc.1",
-    "vuepress": "^1.0.2",
+    "@vuepress/plugin-active-header-links": "^1.1.0",
+    "@vuepress/plugin-back-to-top": "^1.1.0",
+    "@vuepress/plugin-google-analytics": "^1.1.0",
+    "vuepress": "^1.1.0",
     "vuepress-plugin-autometa": "^0.1.10"
   },
   "scripts": {
