--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@vuepress/plugin-back-to-top": "^1.2.0",
     "@vuepress/plugin-google-analytics": "^1.2.0",
     "vuepress": "^1.2.0",
-    "vuepress-plugin-autometa": "^0.1.10"
+    "vuepress-plugin-autometa": "^0.1.10",
+    "vuepress-plugin-sitemap": "^2.3.1"
   },
   "scripts": {
     "dev": "vuepress dev",
